更新文章《数组常用方法技巧》

--- a/source/_posts/数组方法技巧总结.md
+++ b/source/_posts/数组方法技巧总结.md
@@ -10,43 +10,46 @@ tags:
 
 
 
-1. 巧用length属性 增加或删除数组的项
+1. 巧用**length属性** 增加或删除数组的项
 
-2. push()  向数组的末端增加项
+2. **push()**  向数组的末端增加项
 
-3. pop()  向数组的末端删除项
+3. **pop()**  向数组的末端删除项
 
-4. unshift() 向数组的前端增加项
+4. **unshift()** 向数组的前端增加项
 
-5. shift()  向数组的前端删除项
+5. **shift()**  向数组的前端删除项
 
-6. reverse() 颠倒数组的顺序
+6. **reverse()** 颠倒数组的顺序
 
-7. sort() 按照数组项的字符编码排序
+7. **sort()** 按照数组项的字符编码排序
 
-8. concat() 复制数组的副本，若有参数（字符串或数组）则在数组的末端增加项
+8. **concat()** 复制数组的副本，若有参数（字符串或数组）则在数组的末端增加项
 
-9. slice()
+9. **slice()**   接受一或两个参数，即要返回项的起始和结束位置
 
-10. splice()
+10. **splice()   最强大的数组方法！！**
+□　删除：可以删除任意数量的项，只需指定2个参数：要删除的第一项的位置和要删除的项数。例如，spl ice（0，2）会删除数组中的前两项。
+□　插入：可以向指定位置插入任意数量的项，只需提供3个参数：起始位置、0（要删除的项数）和要插入的项。如果要插入多个项，可以再传入第四、第五，以至任意多个项。例如，splice（2,0, "red", "green"）会从当前数组的位置2开始插入字符串"red"和"green"。
+□　替换：可以向指定位置插入任意数量的项，且同时删除任意数量的项，只需指定3个参数：起始位置、要删除的项数和要插入的任意数量的项。插入的项数不必与删除的项数相等。例如，splice（2,1, "red", "green"）会删除当前数组位置2的项，然后再从位置2开始插入字符串"red"和"green"。
 
-11. indexOf()
+11. **indexOf()**  返回查找项的索引位置，可接受第二个参数表示开始查找的位置
 
-12. lastIndexOf()
+12. **lastIndexOf()**  从数组最后一项开始查找，返回查找项的索引位置
 
-13. every()
+13. **every()**  对数组中的每一项运行给定函数，如果该函数对每一项都返回true，则返回true。
 
-14. filter()
+14. **filter()** 对数组中的每一项运行给定函数，返回该函数会返回true的项组成的数组。
 
-15. forEach()
+15. **forEach()** 对数组中的每一项运行给定函数。这个方法没有返回值。
 
-16. map()
+16. **map()**  对数组中的每一项运行给定函数，返回每次函数调用的结果组成的数组。
 
-17. some()
+17. **some()** 对数组中的每一项运行给定函数，如果该函数对任一项返回true，则返回true。
 
-18. reduce()
+18. **reduce()** 迭代数组所有的项，可用于求和，用的比较少，不做赘述。
 
-19. reduceRight()
+19. **reduceRight()** 与reduce()类似，只是迭代从数组最后一项开始
 
 
 ## 一.增加数组的项
